# HikBridge

./: .gitmodules  CMakeLists.txt  HikDeviceSession.cpp  HikDeviceSession.h  StateMachine.cpp  StateMachine.h  main.cpp
alsa-lib-1.2.6.1/: configure  libtool
alsa-lib-1.2.6.1/include/: config.h.in
alsa-lib-1.2.6.1/src/: Makefile.in
alsa-lib-1.2.6.1/src/ucm/: Makefile.in
hik-sdk-include/: HCNetSDK.h
